# just_wheel

./: .env  .env.example  README.md  _check_chrome.py  _check_import.py  _check_stealth.py  _debug_parsers.py  docker-compose.yml  pyproject.toml  requirements.txt
.deepseek/: instructions.md
app/: config.py  crud.py  main.py  models.py  routes.py  schemas.py
app/ml/: __init__.py  predictor.py
app/parsers/: __init__.py  browser.py  ozon.py  wildberries.py  yandex.py
app/templates/: analysis.html  base.html  edit_estimate.html  edit_parsed.html  estimate.html  estimates.html  index.html  parse.html  parsed_list.html  result.html
