[project]
name = "market-price-estimator"
version = "0.1.0"
description = "Оценка рыночной цены для автомобильных шин и дисков"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.1",
    "uvicorn[standard]==0.23.2",
    "sqlalchemy>=2.0,<3.0",
    "pydantic==2.8.0",
    "pydantic-settings==2.5.2",
    "psycopg2-binary==2.9.11",
    "jinja2==3.1.3",
    "python-multipart==0.0.6",
    "requests==2.32.3",
    "beautifulsoup4==4.13.3",
    "selenium>=4.44.0",
    "webdriver-manager>=4.1.0",
    "scikit-learn>=1.8.0",
]
